--- a/test/fixtures/parser.html
+++ b/test/fixtures/parser.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Test HTML document</title>
-	</head>
-	<body>
-		<h1>Hello World</h1>
-		<BR><BR><span>HTML content!</span>
-	</body>
+  <head>
+    <title>Test HTML document</title>
+  </head>
+  <body>
+    <h1>Hello World</h1>
+    <br /><br /><span>HTML content!</span>
+  </body>
 </html>
